--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 
-  background: linear-gradient(to top left, #ffdeb4, #495c83);
+  background-color: #D7E9B9;
   padding: 0;
 }
 
